Fixed TextField labels bleeding through sidebar by changing the z-index.

--- a/src/page_styling.css
+++ b/src/page_styling.css
@@ -156,10 +156,6 @@ body {
   border-radius: 15px;
 }
 
-.focusOutline {
-  border: solid red 1px !important;
-}
-
 .login_form_div button {
   width: 80px;
 }
@@ -321,7 +317,7 @@ body {
   .sidebar {
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 1 !important;
     top: 0;
     left: 0;
     overflow-x: hidden;
